[package]
name = "tpscube"
version = "0.1.0"
authors = ["Rusty Wagner <rusty.wagner@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version="0.12", default-features=false }
tpscube_core = { path="lib", default-features=false }
getrandom = "0.2"
instant = "0.1"
anyhow = "1.0"
chrono = "0.4"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
default = ["tpscube_core/native-storage"]
wasm = ["getrandom/js", "tpscube_core/web-storage", "instant/wasm-bindgen", "chrono/wasmbind"]

[profile.release]
panic = "abort"
lto = true
