[package]
name = "tpscube"
version = "0.1.0"
authors = ["Rusty Wagner <rusty.wagner@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = { version="0.13", default-features=false }
epi = { version="0.13" }
tpscube_core = { path="lib", default-features=false }
getrandom = "0.2"
instant = "0.1"
anyhow = "1.0"
chrono = "0.4"
gl_matrix = "0.0"
num-traits = "0.2"

[features]
default = ["tpscube_core/native-storage", "tpscube_core/bluetooth"]
wasm = ["getrandom/js", "tpscube_core/web-storage", "instant/wasm-bindgen", "chrono/wasmbind"]

[profile.dev]
opt-level = 2

[profile.release]
panic = "abort"
lto = true

[target.'cfg(target_arch="wasm32")'.dependencies]
egui_web = { version="0.13", default-features=false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "Clipboard",
  "ClipboardEvent",
  "CompositionEvent",
  "console",
  "CssStyleDeclaration",
  "DataTransfer",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "FocusEvent",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "InputEvent",
  "KeyboardEvent",
  "Location",
  "MediaQueryList",
  "MouseEvent",
  "Navigator",
  "Performance",
  "Storage",
  "Touch",
  "TouchEvent",
  "TouchList",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WheelEvent",
  "Window",
]

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
egui_glium = { version="0.13", default-features=false }
glium = "0.30"
tinyfiledialogs = "3.8"
