[package]
name = "tpscube_core"
version = "0.1.0"
authors = ["Rusty Wagner <rusty.wagner@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
num_enum = "0.5"
rand = "0.8"
chrono = "0.4"
flatbuffers = "2.0"
anyhow = "1.0"
uuid = { version="0.8", features=["v4"] }
dirs = "3.0"
serde_json = "1.0"
base64 = "0.13"
csv = "1.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
js-sys = { version="0.3", optional=true }
web-sys = { version="0.3", optional=true, features=["Storage", "Window"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rocksdb = { version="0.16", optional=true }
reqwest = { version="0.11", features=["rustls-tls", "blocking", "json"], optional=true }
http = { version="0.2", optional=true }

[features]
default = []
no_solver = []
storage = []
native-storage = ["storage", "rocksdb", "reqwest", "http"]
web-storage = ["storage", "js-sys", "web-sys", "uuid/wasm-bindgen", "chrono/wasmbind"]
