[package]
name = "sync"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda_http = "0.3"
serde_json = "1.0"
tokio = "1.0"
rusoto_core = { version="0.46", default_features=false, features=["rustls"] }
rusoto_dynamodb = { version="0.46", default_features=false, features=["rustls"] }
anyhow = "1.0"
zstd = "0.8"
tpscube_core = { path="../lib" }
